category title alignment and sticky filter fixes

--- a/app/design/frontend/Shopcsn/Store/web/css/source/style/_header.less
+++ b/app/design/frontend/Shopcsn/Store/web/css/source/style/_header.less
@@ -872,6 +872,17 @@
 }
 
 
+@media screen and (min-width: 769px) and (max-width: 992px) {
+    .header-wrapper {
+        .menu-wrap {
+         .nav-sections {
+             left: -85px;
+         }
+        }
+    }
+}
+
+
 @media screen and (min-width: 769px) {
 .hamburger {
     .nav-open & {
